--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -1,7 +1,3 @@
-* {
-    font-family: "Segoe UI";
-}
-
 body {
     background: url('../img/taust.svg') no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -10,66 +6,66 @@ body {
     background-size: cover;
 }
 
-a {
+nav {
+    background-color: #4DAB54;
+    font-family: "Segoe UI";
+}
+
+nav.nav-center ul {
+    text-align: center;
+}
+nav.nav-center ul li {
+    display: inline-block;
+    float: none;
+}
+nav.nav-center ul li a {
+    font-weight: 600;
+    font-size: 24pt !important;
+    color: #000000;
+/*    display: inline-block;*/
+}
+
+nav.clean {
+    background: none;
+    box-shadow: none;
+}
+nav.clean .breadcrumb {
+    color: rgb(128, 128, 128);
+}
+nav.clean .breadcrumb:last-child {
+    color: rgb(0, 0, 0);
+}
+nav.clean .breadcrumb:before {
+    color: rgba(128, 128, 128, 0.7);
+}
+
+.tabs .tab {
+    text-transform: none;
+}
+.tabs .tab a {
+    font-family: "Segoe UI";
+    font-size: 20pt;
+    font-weight: 600;
     color: gray;
 }
-
-a:hover {
-    color: #4DAB54;
-}
-
-/* change the background color */
-.navbar-green {
-    background-color: #4DAB54;
-}
-/* change the brand, link and text color */
-.navbar-green .navbar-brand,
-.navbar-green .navbar-text,
- .navbar-green .navbar-nav .nav-link {
-    font-weight: 600;
-    color: #000000;
-}
-
-/* change the color of active or hovered links */
-.navbar-green .nav-item.active .nav-link,
-.navbar-green .nav-item:focus .nav-link,
-.navbar-green .nav-item:hover .nav-link {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.navbar {
-    font-size: 24pt !important;
-}
-
-.breadcrumb {
+.tabs .tab a:hover, .tabs .tab a.active {
     background-color: transparent;
-    margin-bottom: 0;
-}
-
-.breadcrumb-item.active {
-    color: #000000;
-}
-.breadcrumb-item + .breadcrumb-item::before {
-    content: ">";
-}
-
-.nav-tabs {
-    font-size: 20pt !important;
-    font-weight: 600;
-    border-width: 2px;
-}
-
-.nav-tabs .nav-item {
-    margin-bottom: -2px;
-}
-
-.nav-tabs .nav-link.active, .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
     color: #4DAB54;
-    border-color: #4DAB54;
-    border-width: 0 0 2px;
+}
+.tabs .tab a:focus, .tabs .tab a:focus.active {
+    background-color: rgba(77,171,84,0.2);
+    outline: none;
+}
+.tabs .indicator {
+	background-color: #4DAB54;
+}
+
+.bt {
+	border-top: 1px solid rgba(160,160,160,0.2);
 }
 
 .card {
+    font-family: "Segoe UI";
     font-size: 16pt;
 }
 
@@ -77,22 +73,18 @@ a:hover {
     color: #4DAB54;
 }
 
-.answer textarea {
-    font-size: 16pt;
-    font-family: 'Segoe UI';
-}
-
 h2 {
     font-size: 20pt;
     font-weight: 600;
 }
 
-.btn-success {
+.btn {
     background-color: #4DAB54;
-    border-color: #4DAB54;
+}
+.btn:hover {
+    background-color: #4DAB54;
 }
 
-.card-header {
-    background-color: #ffffff;
-    cursor: pointer;
+.collapsible-header {
+    margin-bottom: 0;
 }
