--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -135,3 +135,15 @@ h2 {
 #account-logo {
     font-size: 37px;
 }
+
+
+#exercise-list {
+    font-size: 2.5rem;
+    margin-top: 5rem;
+}
+
+.collection a.course-item {
+    line-height: 5rem;
+    color: #000;
+}
+
