--- a/wui/fragments/navbar.html
+++ b/wui/fragments/navbar.html
@@ -9,9 +9,16 @@
             </ul>
         </div>
     </div>
-    <a href="https://idp.lahendus.ut.ee/auth/realms/master/account">
-        <div id="account">
+    <div id="account">
+        <a class="dropdown-trigger" href="#!" data-target="profile-dropdown">
             <i id="account-logo" class="left material-icons">account_circle</i><span>Karmen</span>
-        </div>
-    </a>
+        </a>
+    </div>
 </nav>
+
+<!-- Profile dropdown menu structure -->
+<ul id="profile-dropdown" class="dropdown-content">
+    <li><a href="#!">Konto andmed</a></li>
+    <li><a href="#!">Logi välja</a></li>
+</ul>
+
