wui css refactor

--- a/wui/fragments/navbar.html
+++ b/wui/fragments/navbar.html
@@ -9,9 +9,9 @@
             </ul>
         </div>
     </div>
-    <div id="account">
+    <div id="profile-wrapper">
         <a class="dropdown-trigger" href="#!" data-target="profile-dropdown">
-            <i id="account-logo" class="left material-icons">account_circle</i><span>Karmen</span>
+            <i id="profile-logo" class="left material-icons">account_circle</i><span>Karmen</span>
         </a>
     </div>
 </nav>
