--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -1,4 +1,6 @@
 
+/** Page, body, general **/
+
 html {
     font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
@@ -13,13 +15,15 @@ body {
 }
 
 
-.logo-img {
-    max-height: 58px;
-    height: 2.1rem;
-}
+/** Navbar **/
 
 nav {
     background-color: #4DAB54;
+}
+
+.logo-img {
+    max-height: 58px;
+    height: 2.1rem;
 }
 
 nav.nav-center ul {
@@ -45,10 +49,16 @@ nav.nav-center ul li a.nav-link {
     }
 }
 
-@media only screen and (min-width: 993px) {
-    .container {
-        width: 62%;
-    }
+#profile-wrapper {
+    position: absolute;
+    right: 25px;
+    top: 3px;
+    font-size: 1.7rem;
+}
+
+#profile-logo {
+    font-size: 37px;
+    margin-right: 10px;
 }
 
 .dropdown-content li>a {
@@ -56,6 +66,17 @@ nav.nav-center ul li a.nav-link {
     font-size: 1.5rem;
 }
 
+
+/** Container **/
+
+@media only screen and (min-width: 993px) {
+    .container {
+        width: 62%;
+    }
+}
+
+
+/** Breadcrumbs **/
 
 nav.clean {
     background: none;
@@ -74,6 +95,9 @@ nav.clean .breadcrumb:last-child {
 nav.clean .breadcrumb:before {
     color: rgba(128, 128, 128, 0.7);
 }
+
+
+/** Tabs **/
 
 .tabs .tab {
     text-transform: none;
@@ -98,6 +122,9 @@ nav.clean .breadcrumb:before {
     background-color: #4DAB54;
 }
 
+
+/** Card **/
+
 .bt {
     border-top: 1px solid rgba(160, 160, 160, 0.2);
 }
@@ -105,6 +132,9 @@ nav.clean .breadcrumb:before {
 .card {
     font-size: 1.7rem;
 }
+
+
+/** Exercise page **/
 
 .subheading {
     color: #4DAB54;
@@ -127,26 +157,8 @@ h2 {
     margin-bottom: 0;
 }
 
-#logo {
-    margin-right: 100px;
-}
 
-#account {
-    position: absolute;
-    right: 25px;
-    top: 3px;
-    font-size: 1.7rem;
-}
-
-
-i.left {
-    margin-right: 10px;
-}
-
-#account-logo {
-    font-size: 37px;
-}
-
+/** Courses page **/
 
 #exercise-list {
     font-size: 2.1rem;
