wui profile menu links

--- a/wui/fragments/navbar.html
+++ b/wui/fragments/navbar.html
@@ -18,7 +18,7 @@
 
 <!-- Profile dropdown menu structure -->
 <ul id="profile-dropdown" class="dropdown-content">
-    <li><a href="#!">Konto andmed</a></li>
-    <li><a href="#!">Logi välja</a></li>
+    <li><a href="https://idp.lahendus.ut.ee/auth/realms/master/account">Konto andmed</a></li>
+    <li><a id="logout-link">Logi välja</a></li>
 </ul>
 
