wui common authentication, page init & token parsing

--- a/wui/fragments/navbar.html
+++ b/wui/fragments/navbar.html
@@ -11,7 +11,7 @@
     </div>
     <div id="profile-wrapper">
         <a class="dropdown-trigger" href="#!" data-target="profile-dropdown">
-            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">Karmen</span>
+            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">Kasutaja</span>
         </a>
     </div>
 </nav>
