wui profile menu wrapper div is clickable and body to 100% to make it dismissable by clicking anywhere

--- a/wui/fragments/navbar.html
+++ b/wui/fragments/navbar.html
@@ -1,4 +1,3 @@
-
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
@@ -9,8 +8,8 @@
             </ul>
         </div>
     </div>
-    <div id="profile-wrapper">
-        <a class="dropdown-trigger" href="#!" data-target="profile-dropdown">
+    <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
+        <a href="#!">
             <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">Kasutaja</span>
         </a>
     </div>
