--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -4,6 +4,7 @@
 html {
     font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
+    height: 100%;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    min-height: 100%;
 }
 
 
