wui exercise page teacher view submission

--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -168,6 +168,12 @@ h2 {
     color: #000;
 }
 
+.editor-wrapper {
+    margin-top: 3rem;
+    padding: 1rem;
+    background-color: #eee;
+}
+
 
 
 /** Courses page **/
