--- a/wui/fragments/breadcrumbs.html
+++ b/wui/fragments/breadcrumbs.html
@@ -1,7 +1,7 @@
 <nav class="clean">
     <div class="nav-wrapper">
-        <a href="#!" class="breadcrumb">Kursused</a>
-        <a id="course-crumb" href="#!" class="breadcrumb">kursus</a>
-        <a id="exercise-crumb" href="#!" class="breadcrumb">ülesanne</a>
+        <a href="/courses.html" class="breadcrumb">Kursused</a>
+        <a id="course-crumb" href="#!" class="breadcrumb"></a>
+        <a id="exercise-crumb" href="#!" class="breadcrumb"></a>
     </div>
 </nav>
