--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -1,4 +1,3 @@
-
 /** Page, body, general **/
 
 html {
@@ -63,7 +62,7 @@ nav.nav-center ul li a.nav-link {
     margin-right: 10px;
 }
 
-.dropdown-content li>a {
+.dropdown-content li > a {
     color: #000;
     font-size: 1.5rem;
 }
@@ -237,12 +236,23 @@ label[for=feedback], label[for=grade] {
 .collection a.course-item {
     line-height: 5rem;
     color: #000;
+    padding: 10px 60px 10px 20px;
+}
+
+div.course-wrapper {
+    position: relative;
 }
 
 .course-student-count {
     /* TODO */
 }
 
+a.course-add-students {
+    position: absolute;
+    top: 22px;
+    right: 20px;
+    color: #4cab54;
+}
 
 
 /** Exercises page **/
@@ -256,7 +266,6 @@ label[for=feedback], label[for=grade] {
     line-height: 2.5rem;
     color: #000;
 }
-
 
 
 /* Code editor */
