--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -183,11 +183,11 @@ pre.feedback {
     font-size: 1.5rem;
 }
 
-#auto-feedback, #teacher-auto-feedback {
+pre.auto-feedback {
     background-color: #f5f5f5;
 }
 
-#auto-grade, #teacher-auto-grade, #teacher-grade, #teacher-teacher-grade {
+.grade-number {
     font-weight: 500;
 }
 
