wui teacher submission code editor is copyable

--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -274,6 +274,10 @@ a.course-add-students {
     font-size: 1.9rem;
 }
 
+.no-cursor .CodeMirror-cursors {
+    visibility: hidden !important;
+}
+
 
 /** Participants page **/
 
