wui code editors resize automatically from 20 vh to 85 vh

--- a/wui/css/main.css
+++ b/wui/css/main.css
@@ -272,6 +272,12 @@ a.course-add-students {
 
 .CodeMirror {
     font-size: 1.9rem;
+    height: auto;
+}
+
+.CodeMirror-scroll {
+    min-height: 20vh;
+    max-height: 85vh;
 }
 
 .no-cursor .CodeMirror-cursors {
