--- a/wui/css/exercise.css
+++ b/wui/css/exercise.css
@@ -14,6 +14,10 @@
     font-style: italic;
 }
 
+#exercise-text .bold {
+    font-weight: bold;
+}
+
 #exercise-text code {
     background-color: #eeeeee;
 }
