--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -290,17 +290,18 @@ label[for=feedback], label[for=grade] {
     padding: 10px 60px 10px 20px;
 }
 
-div.course-wrapper {
+div.teacher-course-wrapper {
     position: relative;
 }
 
 .course-student-count {
-    /* TODO */
+    font-size: 1.9rem;
+    color: #333;
 }
 
 a.course-add-students {
     position: absolute;
-    top: 22px;
+    top: 23px;
     right: 20px;
     color: #4cab54;
 }
@@ -394,7 +395,7 @@ label[for=new-students-list] {
 
 /** Common page **/
 
-div.divided-collection > a.collection-item {
+div.divided-collection a.collection-item {
     margin-bottom: 1rem;
     box-shadow:
             0 1px 1px 0 rgba(0,0,0,0.1),
@@ -406,6 +407,21 @@ div.divided-collection {
     border: none;
 }
 
-h3.page-title {
+h3.title {
+    margin-bottom: 0;
     margin-top: 5rem;
+}
+
+div.title-wrap {
+    position: relative;
+}
+
+.title-button {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+div.title-wrap > .title-button > i.material-icons {
+    font-size: 2rem;
 }
