--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -425,3 +425,51 @@ div.title-wrap {
 div.title-wrap > .title-button > i.material-icons {
     font-size: 2rem;
 }
+
+
+/** Loading placeholders **/
+
+.loading-collection{
+    border: none;
+    margin-top: 4rem;
+}
+
+@keyframes pulse {
+    0%,
+    30% {
+        opacity: 0.3;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    90%,
+    100% {
+        opacity: 1;
+    }
+}
+
+.loading-item {
+    height: 6rem;
+    margin: 2rem;
+    background: rgb(214, 214, 214);
+    animation: pulse 1.5s linear infinite alternate;
+    border-radius: 0.5rem;
+    opacity: 0.3;
+}
+
+.loading-collection :nth-child(1) {
+    width: 20%;  /* Page title */
+}
+
+.loading-collection :nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.loading-collection :nth-child(3) {
+    animation-delay: 0.5s;
+}
+
+.loading-collection :nth-child(4) {
+    animation-delay: 0.7s;
+}
+
