--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background: url('../img/bg.svg') no-repeat center center fixed;
+    background: url('../img/bg_v3.svg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
