--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -284,12 +284,6 @@ label[for=feedback], label[for=grade] {
     margin-top: 2rem;
 }
 
-.collection a.course-item {
-    line-height: 5rem;
-    color: #000;
-    padding: 10px 60px 10px 20px;
-}
-
 div.teacher-course-wrapper {
     position: relative;
 }
@@ -392,20 +386,70 @@ label[for=new-students-list] {
     min-height: 5rem;
 }
 
+/** Common **/
 
-/** Common page **/
+/** Divided collection **/
 
 div.divided-collection a.collection-item {
+    line-height: 5rem;
+    color: #333;
+    padding: 10px 60px 10px 20px;
     margin-bottom: 1rem;
+    border-bottom: none;
     box-shadow:
             0 1px 1px 0 rgba(0,0,0,0.1),
             0 2px 1px -2px rgba(0,0,0,0.09),
             0 1px 3px 0 rgba(0,0,0,0.1);
 }
 
+.divided-collection a.collection-item:not(.active):hover {
+    background-color: #e5e5e5;
+}
+
 div.divided-collection {
     border: none;
+    overflow: unset;
 }
+
+
+/** Bottom distribution bar **/
+
+.bb-wrap {
+    padding-bottom: 0 !important;
+}
+
+.bb {
+    line-height: 0;
+}
+
+div.divided-collection a.collection-item .bb {
+    margin-left: -20px;
+    margin-right: -60px;
+}
+
+.bb-item {
+    display: inline-block;
+    height: 20px;
+}
+
+.bb-green {
+    border-bottom: 7px solid #4DAB54;
+}
+
+.bb-yellow {
+    border-bottom: 7px solid #ffd052;
+}
+
+.bb-grey {
+    border-bottom: 7px solid #c1c1c1;
+}
+
+.bb-white {
+    border-bottom: 7px solid #fff;
+}
+
+
+/** Page title **/
 
 h3.title {
     margin-bottom: 0;
@@ -491,4 +535,12 @@ div.title-wrap > .title-button > i.material-icons {
 .toast .btn-flat {
     min-width: 100px;
 }
+
+
+/** Tooltip **/
+
+.material-tooltip {
+    font-size: 1.6rem;
+}
+
 
