--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -335,6 +335,12 @@ label[for=feedback], label[for=grade] {
     margin-left: 10px;
 }
 
+#exercises-list .eval-logo-missing {
+    vertical-align: middle;
+    width: 24px;
+    margin-left: 10px;
+}
+
 
 /* Code editor */
 
