wui student exercises list

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -456,6 +456,7 @@ div.divided-collection a.collection-item .bb {
 .bb-item {
     display: inline-block;
     height: 20px;
+    width: 100%;
 }
 
 .bb-green {
