--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -24,7 +24,15 @@ nav {
 
 .logo-img {
     max-height: 58px;
-    height: 2.1rem;
+    height: 30px;
+    vertical-align: middle;
+}
+
+.logo-text {
+    font-size: 2.2rem;
+    font-family: 'Sniglet', cursive;
+    vertical-align: middle;
+    margin-left: 3px;
 }
 
 nav.nav-center ul {
