wui subheading style for all subheadings in exercise page

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -196,7 +196,7 @@ nav.crumb-wrap .breadcrumb:before {
     border-top: 1px solid #e2e2e2;
 }
 
-#exercise-card .exercise-info .subheading {
+#exercise-card .subheading {
     color: #4DAB54;
     font-weight: 500;
 }
