wui exercise page student submission tab templates

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -242,7 +242,6 @@ nav.crumb-wrap .breadcrumb:before {
 #exercise-card #add-grade-wrap {
     padding: 2rem;
     border: 1px solid #eee;
-    font-size: 16px;
 }
 
 #exercise-card #grade:focus {
@@ -460,6 +459,18 @@ label[for=new-students-list] {
 
 .btn:hover {
     background-color: #4DAB54;
+}
+
+
+/** Form elements **/
+
+.input-field input[type=number],
+.input-field textarea  {
+    height: 3.5rem;
+}
+
+.input-field label{
+    pointer-events: all;
 }
 
 
