EZ-1052 participants page course title & open/close box

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -416,6 +416,10 @@ nav.crumb-wrap .breadcrumb:before {
     margin-top: 20px;
 }
 
+#participants-container table th {
+    font-weight: 500;
+}
+
 
 /** Common **/
 
