--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -608,6 +608,74 @@ div.title-wrap > .title-button > i.material-icons {
 }
 
 
+/** Empty placeholders **/
+
+.missing-content-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 25vh;
+    margin-top: 2rem;
+    padding: 20px;
+    background-color: #e3e3e3;
+}
+
+.missing-content-wrap .robot {
+    display: flex;
+    justify-content: space-between;
+    flex-shrink: 0;
+    width: 50px;
+    height: 40px;
+    padding: 11px 7px 0 7px;
+    background-color: #a8a8a8;
+    border-radius: 20%;
+}
+
+.missing-content-wrap .antenna {
+    width: 8px;
+    height: 10px;
+    flex-shrink: 0;
+    background-color: #a8a8a8;
+}
+
+.missing-content-wrap .antennaball {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+    background-color: #a8a8a8;
+    border-radius: 50%;
+    transform: translateY(3px);
+}
+
+.missing-content-wrap .antennaball:hover {
+    background-color: #fbff00;
+    box-shadow: 0 0 10px 10px rgba(255, 255, 190, 0.8);
+}
+
+.missing-content-wrap .robot-eye {
+    background: white;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    animation: eye-blink 3s infinite;
+}
+
+.missing-content-wrap .text {
+    font-size: 2rem;
+    color: #828282;
+}
+
+@keyframes eye-blink {
+    0%, 100% {
+        transform: scale(1, .05);
+    }
+    5%, 95% {
+        transform: scale(1, 1);
+    }
+}
+
+
 /** Icon **/
 
 i.material-icons {
